--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/main.css"> 
     <title>Portfolio</title>
 </head>
 <body>
     <!-- aside section -->
-    <aside class="aside">
-        <img src="/images/rasm6.png" alt="author">
-        <h3>Jackson Ford</h3>
-        <p><a href="#">UI/UX/DESIGNER</a> IN PHILIPPINES</p>
+    <div class="container">
+        <aside class="aside">
+            <img src="/images/rasm6.png" alt="author">
+            <h3>Jackson Ford</h3>
+            <p><a href="#">UI/UX/DESIGNER</a> IN PHILIPPINES</p>
             <ul class="nav">
                 <li class="nav-item">
                     <a href="#">Home </a>
@@ -53,10 +55,20 @@
             <p class="footer">
                 <p>
                     © Copyright ©2022 All rights reserved | <br><br>This template is made with  by<br><br> Asadbek Muxtorov <br><br>
-Demo Images: Unsplash.com
+                    Demo Images: Unsplash.com
                 </p>
             </p>
-    </aside>
-    
+        </aside>
+        <div class="hero">            
+            <div class="hero-description">
+                <h3>Assalomu alekum</h3>
+                <h2> I'm <span class="type"></span></h2>
+            
+            </div>
+        </div>
+    </div>
+   
+    <script src="/js/app.js"></script>
+    <script src="/js/typed.js"></script>
 </body>
 </html>
