--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     
     <div class="container-lg box">
         <!-- aside section -->
+        <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                |||
+            </label>
         <aside class="aside">
+            
             <img src="/images/rasm6.png" alt="author">
             <h3>Jackson Ford</h3>
             <p><a href="#">UI/UX/DESIGNER</a> IN PHILIPPINES</p>
