--- a/aos/test/fixtures/aos.fixture.html
+++ b/aos/test/fixtures/aos.fixture.html
@@ -5,10 +5,10 @@
     <style type="text/css">
       * {box-sizing: border-box;}
       body {
-        margin: 0; padding: 0 20px; text-align: center;
+        margin: 0; padding: 0 1.25rem; text-align: center;
       }
       .aos-item {
-        width: 100%; height: 130px; margin: 0 0 20px 0; background: #ccc;
+        width: 100%; height: 130px; margin: 0 0 1.25rem 0; background: #ccc;
       }
     </style>
   </head>
